--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -9,6 +9,7 @@ on:
       - "**.F90"
       - "**.cmake"
       - "**.build"
+      - "**.txt"
       - ".github/workflows/ci_linux.yml"
   pull_request:
     paths:
@@ -16,6 +17,7 @@ on:
       - "**.F90"
       - "**.cmake"
       - "**.build"
+      - "**.txt"
       - ".github/workflows/ci_linux.yml"
 
 jobs:
