Squashed commit of the following:
commit f807f566e4d2b592f7d37fadf6f00aa1b89d1ee8
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Wed Jan 15 02:13:43 2020 -0500

    test_potential use hdf5

commit 0ea2149fb3a51da02fea9d0742e932c66ccf1052
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Wed Jan 15 01:02:36 2020 -0500

    test_interp2: hdf5

    test_interp3: hdf5

commit 09b679f77a01f010057d98f315d20c9c0150eeba
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 14 23:45:16 2020 -0500

    cmake: mumps_interface as library

commit e92b5365aef19eae77d2f736caebe7a3a17b90ea
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 14 23:34:48 2020 -0500

    cmake: check more carefully for functioning python

commit d871f717de105cf9bc0d29c211dec7d5e1882feb
Author: Michael Hirsch, Ph.D <scivision@users.noreply.github.com>
Date:   Tue Jan 14 23:08:50 2020 -0500

    make mumps usage polymorphic with module shim

--- a/.github/workflows/ci_macos.yml
+++ b/.github/workflows/ci_macos.yml
@@ -30,13 +30,7 @@ jobs:
       with:
         python-version: '3.x'
 
-# FIXME: need Meson 0.53 to have better MacOS HDF5 finding
-    - run: |
-        git clone https://github.com/mesonbuild/meson
-        pip install -e meson
-      working-directory: /tmp
-
-    - run: pip install -e .[tests]
+    - run: python3 -m pip install -e .[tests]
     - run: brew install pkg-config gcc open-mpi lapack hdf5 scalapack
 
     - run: meson setup build -Dhdf5=enabled
