--- a/numerical/interpolation/meson.build
+++ b/numerical/interpolation/meson.build
@@ -4,41 +4,40 @@ interp = library('interp', 'interpolation.f90',
 test_interp1_exe = executable('test_interp1', 'testinterp1.f90',
   link_with: [const, interp])
 test('Interp1d', test_interp1_exe,
-  suite: 'unit', timeout: 15)
+  suite: 'unit', timeout: 15, workdir: meson.current_build_dir())
+
+if not hdf5_interface.found()
+  subdir_done()
+endif
 
 test_interp2_exe = executable('test_interp2', 'testinterp2.f90',
-  link_with: [const, interp])
+  link_with: [const, interp],
+  dependencies: hdf5_interface)
 test('Interp2d', test_interp2_exe,
-  suite: 'unit', timeout: 15)
-
-test_interp3_exe = executable('test_interp3', 'testinterp3.f90',
-  link_with: [const, interp])
-
-
-#== Octave
+  suite: 'unit', timeout: 15, workdir: meson.current_build_dir())
+test('Interp2d_python', python,
+  args: [files('testinterp.py'),
+         meson.current_build_dir() / 'output2d.h5'],
+  timeout: 30, suite: 'unit',
+  is_parallel: false, priority: -100)
 test('Interp2d_octave', octave,
   args: ['-q', '--eval',
-         'testinterp("' + meson.build_root() / 'output2D.dat",' + get_option('realbits') +')'],
-  timeout: 30,
-  workdir: meson.current_source_dir(),
-  suite: 'unit')
+         'testinterp("' + meson.current_build_dir() / 'output2d.h5")'],
+  timeout: 30, workdir: meson.current_source_dir(),  suite: 'unit',
+  is_parallel: false, priority: -100)
 
-
-#== Python
-# must have .current_source_dir() for Python script
-test('Interp2d_python', python,
-  args: [meson.current_source_dir() / 'testinterp.py',
-         meson.build_root() / 'output2D.dat',
-         get_option('realbits')],
-  timeout: 30,
-  suite: 'unit')
-
-# interp3d not parallel because of 600+ MB RAM usage (for small RAM systems)
+test_interp3_exe = executable('test_interp3', 'testinterp3.f90',
+  link_with: [const, interp],
+  dependencies: hdf5_interface)
+test('Interp3d', test_interp3_exe,
+  suite: 'unit', timeout: 15, workdir: meson.current_build_dir())
 test('Interp3d_python', python,
   args: [meson.current_source_dir() / 'testinterp3.py',
-         meson.build_root() / 'output3D.dat',
-         get_option('realbits'),
-         test_interp3_exe],
-  timeout: 90, # need 90 for slow CPU
-  suite: 'unit',
-  is_parallel: false)
+         meson.current_build_dir() / 'output3d.h5'],
+  timeout: 90, suite: 'unit', # timeout 90 for slow cpu
+  is_parallel: false, priority: -100)
+test('Interp3d_octave', octave,
+  args: ['-q', '--eval',
+         'testinterp3("' + meson.current_build_dir() / 'output3d.h5")'],
+  timeout: 30, workdir: meson.current_source_dir(), suite: 'unit',
+  is_parallel: false, priority: -100)
