--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,6 +1,5 @@
 test_mpi_exe = executable('test_mpi', 'test_mpi.f90',
-  dependencies: mpi,
-  link_language: 'fortran')
+  dependencies: mpi)
 test('mpi_basic', test_mpi_exe,
   timeout: 10,
   env: nomalloc_env,
@@ -8,17 +7,15 @@ test('mpi_basic', test_mpi_exe,
 
 
 test_scalapack_exe = executable('test_scalapack', 'test_scalapack.f90',
-  dependencies: [scalapack, blacs, lapack, mpi],
-  link_language: 'fortran')
+  dependencies: [scalapack, blacs, lapack, mpi])
 test('scalapack_basic', test_scalapack_exe,
   timeout: 10,
   env: nomalloc_env,
   suite: 'unit')
 
-test_mumps_exe = executable('test_mumps', 'test_mumps.F90',
-  dependencies: [mumps, scalapack, blacs, lapack, mpi],
-  fortran_args: real_bits,
-  link_language: 'fortran')
+test_mumps_exe = executable('test_mumps',
+  sources : ['test_mumps.f90', mumpsifc_src],
+  dependencies: [mumps, scalapack, blacs, lapack, mpi])
 test('mumps_basic', mpiexec,
   args: ['-np', '2', test_mumps_exe, files('input_simpletest_real.txt')],
   is_parallel: false,
