--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    - run: python -m pip install -e .[tests]
+    - run: python3 -m pip install -e .[tests]
     - name: Install packages
       run: |
         sudo apt update -yq
