--- a/.github/workflows/ci_rawio.yml
+++ b/.github/workflows/ci_rawio.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
-    - run: python -m pip install -e .[tests]
+    - run: python3 -m pip install -e .[tests]
     - name: Install packages
       run: |
         sudo apt update -yq
