--- a/numerical/potential/CMakeLists.txt
+++ b/numerical/potential/CMakeLists.txt
@@ -1,33 +1,45 @@
-add_library(PDEelliptic PDEelliptic.F90)
-target_link_libraries(PDEelliptic PRIVATE const ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
-target_include_directories(PDEelliptic PRIVATE ${MUMPS_INCLUDE_DIRS})
-target_compile_definitions(PDEelliptic PRIVATE REALBITS=${realbits})
+if(realbits EQUAL 32)
+  add_library(mumps_interface mumps_real32.f90)
+else()
+  add_library(mumps_interface mumps_real64.f90)
+endif()
+target_include_directories(mumps_interface PUBLIC ${MUMPS_INCLUDE_DIRS})
+target_link_libraries(mumps_interface PUBLIC ${MUMPS_LIBRARIES})
 
-add_library(potential potential_comm_mumps.f90 potential_mumps.F90 boundary_conditions/potentialBCs_mumps.f90)
+add_library(PDEelliptic PDEelliptic.f90)
+target_link_libraries(PDEelliptic PRIVATE const mumps_interface MPI::MPI_Fortran)
+
+add_library(potential potential_comm_mumps.f90 potential_mumps.f90 boundary_conditions/potentialBCs_mumps.f90)
 target_link_libraries(potential PRIVATE calculus collision const grid interp timeutils
-  ${MUMPS_LIBRARIES} MPI::MPI_Fortran PDEelliptic mpimod)
-target_include_directories(potential PRIVATE ${MUMPS_INCLUDE_DIRS})
-target_compile_definitions(potential PRIVATE REALBITS=${realbits})
+  MPI::MPI_Fortran PDEelliptic mpimod)
 
+
+if(NOT hdf5)
+  return()
+endif()
+
+set(_potential_testfile ${CMAKE_CURRENT_BINARY_DIR}/test_potential2d.h5)
 add_executable(test_potential2d test_potential2D.f90)
-target_link_libraries(test_potential2d const PDEelliptic ${MUMPS_LIBRARIES} MPI::MPI_Fortran)
+target_link_libraries(test_potential2d const PDEelliptic MPI::MPI_Fortran h5fortran)
 add_test(NAME potential2d COMMAND test_potential2d WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 set_tests_properties(potential2d PROPERTIES TIMEOUT 30
                      FIXTURES_SETUP GemPot)
 
 if(OctaveOK)
-add_test(NAME OctavePotential2d
-         COMMAND ${Octave_EXECUTABLE} -q --eval "test_potential2D('${CMAKE_CURRENT_BINARY_DIR}/test_potential2D.dat')"
-         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set_tests_properties(OctavePotential2d  PROPERTIES
-                     TIMEOUT 15
-                     FIXTURES_REQUIRED GemPot)
+add_test(NAME Potential2d_octave
+  COMMAND ${Octave_EXECUTABLE} -q --eval "test_potential2D('${_potential_testfile}')"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+set_tests_properties(Potential2d_octave PROPERTIES
+  REQUIRED_FILES ${_potential_testfile}
+  TIMEOUT 15
+  FIXTURES_REQUIRED GemPot)
 endif(OctaveOK)
 
 if(PythonOK)
-add_test(NAME PythonPotential2d
-  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${CMAKE_CURRENT_BINARY_DIR}/test_potential2D.dat)
-set_tests_properties(PythonPotential2d PROPERTIES
-                     TIMEOUT 10
-                     FIXTURES_REQUIRED GemPot)
+add_test(NAME Potential2d_python
+  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_potential2d.py ${_potential_testfile})
+set_tests_properties(Potential2d_python PROPERTIES
+  REQUIRED_FILES ${_potential_testfile}
+  TIMEOUT 10
+  FIXTURES_REQUIRED GemPot)
 endif(PythonOK)
