--- a/numerical/diffusion/CMakeLists.txt
+++ b/numerical/diffusion/CMakeLists.txt
@@ -8,31 +8,40 @@ endif()
 add_library(diffusion diffusion.f90)
 target_link_libraries(diffusion PRIVATE const grid mesh PDEparabolic)
 
+if(NOT hdf5)
+  return()
+endif()
 
-add_executable(test_diffusion1D test_diffusion1D.f90)
-# lapack for mac
-target_link_libraries(test_diffusion1D PRIVATE PDEparabolic const ${LAPACK_LIBRARIES})
+# --- tests
+
+set(_tmpdifffn ${CMAKE_CURRENT_BINARY_DIR}/test_diffusion1d.h5)
+
+add_executable(test_diffusion1d test_diffusion1D.f90)
+# lapack needed for MacOS
+target_link_libraries(test_diffusion1d PRIVATE PDEparabolic const
+  ${LAPACK_LIBRARIES} h5fortran::h5fortran)
 
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
-add_test(NAME diffusion1D COMMAND test_diffusion1D WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
-set_tests_properties(diffusion1D PROPERTIES
-                     TIMEOUT 5
-                     FIXTURES_SETUP GemDiff)
+add_test(NAME diffusion1d COMMAND $<TARGET_FILE:test_diffusion1d>
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+set_tests_properties(diffusion1d PROPERTIES
+  TIMEOUT 5
+  FIXTURES_SETUP GemDiff)
 
 
 if(OctaveOK)
-add_test(NAME OctaveDiffusion1D
-         COMMAND ${Octave_EXECUTABLE} -q --eval "test_diffusion1D('${CMAKE_BINARY_DIR}/test_diffusion1d.dat')"
-         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
-set_tests_properties(OctaveDiffusion1D  PROPERTIES
-                     TIMEOUT 10
-                     FIXTURES_REQUIRED GemDiff)
+add_test(NAME diffusion1d_octave
+  COMMAND ${Octave_EXECUTABLE} -q --eval "test_diffusion1D('${_tmpdifffn}')"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
+set_tests_properties(diffusion1d_octave PROPERTIES
+  TIMEOUT 10
+  FIXTURES_REQUIRED GemDiff)
 endif(OctaveOK)
 
 if(PythonOK)
-add_test(NAME PythonDiffusion1D
-  COMMAND ${Python3_EXECUTABLE}  ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${CMAKE_BINARY_DIR}/test_diffusion1d.dat)
-set_tests_properties(PythonDiffusion1D PROPERTIES
-                     TIMEOUT 10
-                     FIXTURES_REQUIRED GemDiff)
+add_test(NAME diffusion1d_python
+  COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn})
+set_tests_properties(diffusion1d_python PROPERTIES
+  TIMEOUT 10
+  FIXTURES_REQUIRED GemDiff)
 endif(PythonOK)
