--- a/ionization/CMakeLists.txt
+++ b/ionization/CMakeLists.txt
@@ -13,23 +13,14 @@ add_test(NAME FangIonize
 set_tests_properties(FangIonize PROPERTIES TIMEOUT 10)
 endif(PythonOK)
 
-
-add_library(ionization ionization.f90 glow_dummy.f90)
-target_link_libraries(ionization PRIVATE const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
-
 if(glow)
-  include(${CMAKE_SOURCE_DIR}/cmake/glow.cmake)
+  include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/glow.cmake)
 
-  add_library(ionization_glow ionization.f90 glow_run.F90)
-  target_link_libraries(ionization_glow PUBLIC cglow const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
-  target_include_directories(ionization_glow PUBLIC ${GLOW_BINARY_DIR})
-  target_link_directories(ionization_glow PUBLIC ${GLOW_BINARY_DIR})
-  # double quotes needed in next line since it injects directly into Fortran code
-  target_compile_definitions(ionization_glow PRIVATE DATADIR="${CMAKE_CURRENT_BINARY_DIR}/GLOW_proj-prefix/src/GLOW_proj/data/")
-
-  # "ionization" is in this line to avoid intermittant quirks / race condition with ionization.mod
-  # when ionization_glow and ionization may compile simultaneously.
-  add_dependencies(ionization_glow GLOW_proj ionization)
+  add_library(ionization ionization.f90 glow_run.F90)
+  target_link_libraries(ionization PUBLIC glow::glow const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
+else()
+  add_library(ionization ionization.f90 glow_dummy.f90)
+  target_link_libraries(ionization PRIVATE const neutral grid timeutils fang mpimod MPI::MPI_Fortran)
 endif(glow)
 
 add_library(precipBCs boundary_conditions/precipBCs_mod.f90)
