--- a/numerical/diffusion/meson.build
+++ b/numerical/diffusion/meson.build
@@ -4,7 +4,8 @@ parabolic = library('PDEparabolic',
   dependencies: lapack)
 
 test_diffusion1D_exe = executable('test_diffusion1D', 'test_diffusion1D.f90',
-  link_with: [const, parabolic])
+  link_with: [const, parabolic],
+  dependencies: hdf5_interface)
 test('diffusion1D', test_diffusion1D_exe,
   timeout: 5,
   suite: 'unit')
@@ -13,13 +14,13 @@ test('Diffusion1D_octave', octave,
   args: ['-q', '--eval', 'test_diffusion1D("' + meson.build_root() / 'test_diffusion1d.dat")'],
   timeout: 10,
   workdir: meson.current_source_dir(),
-  suite: 'unit', priority: -100)
+  suite: 'unit', is_parallel: false, priority: -100)
 
 test('Diffusion1D_python', python,
   args: ['test_diffusion1D.py', meson.build_root() / 'test_diffusion1d.dat'],
   timeout: 10,
   workdir: meson.current_source_dir(),
-  suite: 'unit', priority: -100)
+  suite: 'unit', is_parallel: false, priority: -100)
 
 
 diffusion = library('diffusion', 'diffusion.f90',
