cmake: remove -Wpedantic as too many false postives

--- a/meson/meson.build
+++ b/meson/meson.build
@@ -13,16 +13,15 @@ os = host_machine.system()
 # === compiler options
 oldflags = fc.get_supported_arguments(['-std=legacy', '-w', '-fno-implicit-none', '-Wno-error=array-bounds', '-fcheck=no-all',
   '-nocheck', '/nocheck', '-nowarn', '/nowarn', '-nostand', '/nowarn'])
-impnone = fc.first_supported_argument(['-fimplicit-none', '-warn', '/warn:declarations', '-Mdclchk'])
 std18 = fc.first_supported_argument(['-std=f2018', '-stand=f18', '/stand:f18'])
 if fc.get_id() == 'gcc'
   add_project_arguments('-Wno-unused-variable', '-Wno-maybe-uninitialized', '-Wno-unused-dummy-argument', '-Wno-unused-function',
-    impnone, std18, language : 'fortran')
+    '-fimplicit-none', std18, language : 'fortran')
   if get_option('buildtype').contains('debug')
     add_project_arguments('-Werror=array-bounds', '-fcheck=all', language: 'fortran')
   endif
 elif fc.get_id() == 'intel'
-  add_project_arguments('-diag-disable 5268', '-diag-disable 7712', std18, impnone, language: 'fortran')
+  add_project_arguments('-warn', '-diag-disable 5268', '-diag-disable 7712', std18, language: 'fortran')
   if get_option('buildtype').contains('debug')
     # -heap-arrays didn't appear to be needed on Linux?
     add_project_arguments('-check bounds', language: 'fortran')
@@ -30,12 +29,11 @@ elif fc.get_id() == 'intel'
 elif fc.get_id() == 'intel-cl'
   # /fpp is necessary for any Fortran preprocessing statement with Intel ifort on Windows
   # https://software.intel.com/en-us/fortran-compiler-developer-guide-and-reference-fpp
-  add_project_arguments('/Qdiag-disable:5268', '/Qdiag-disable:7712', '/fpp', std18, impnone, language: 'fortran')
+  add_project_arguments('/warn', '/Qdiag-disable:5268', '/Qdiag-disable:7712', '/fpp', std18, language: 'fortran')
   if get_option('buildtype').contains('debug')
     add_project_arguments('/check:bounds', '/heap-arrays', language: 'fortran')
   endif
 elif ['pgi', 'flang'].contains(fc.get_id())
-  add_project_arguments(impnone, language: 'fortran')
   if get_option('buildtype').contains('debug')
     add_project_arguments('-Mbounds', language: 'fortran')
   endif
