ci: install meson if required

--- a/.github/workflows/ci_debug_build.yml
+++ b/.github/workflows/ci_debug_build.yml
@@ -23,7 +23,9 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    - run: python3 -m pip install -e .[tests]
+    - run: |
+        pip install -e .[tests]
+        pip install meson
     - name: Install prereqs
       run: |
         sudo apt update -yq
