--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -64,7 +64,9 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.7'
-    - run: pip install -e .[tests]
+    - run: |
+        pip install -e .[tests]
+        pip install meson
     - name: Install packages
       run: |
         sudo apt update -yq
